--- a/Ex20230920-3/src/main/res/layout/activity_main.xml
+++ b/Ex20230920-3/src/main/res/layout/activity_main.xml
@@ -8,18 +8,19 @@
     <TextView
         android:id="@+id/textview1"
         android:layout_width="match_parent"
-        android:layout_height="545dp"
+        android:layout_height="712dp"
         android:gravity="center"
+        android:text="显示内容"
         android:textColor="#673AB7"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="376dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="btn1_Click"
-        android:text="类与对象"
+        android:text="线程A和B"
         android:textSize="30dp" />
 </LinearLayout>
