--- a/Ex20231101-2/src/main/res/layout/activity_main.xml
+++ b/Ex20231101-2/src/main/res/layout/activity_main.xml
@@ -1,18 +1,54 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="请选择几分钟？"
+        android:textSize="30dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RadioGroup
+        android:id="@+id/rdgsteak"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <RadioButton
+            android:id="@+id/rdgRare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="三分熟" />
+
+        <RadioButton
+            android:id="@+id/rdgmedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="五分熟" />
+
+        <RadioButton
+            android:id="@+id/rdgmedwell"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="七分熟" />
+
+        <RadioButton
+            android:id="@+id/rdgsmwelldone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="全熟" />
+    </RadioGroup>
+
+
+    <TextView
+        android:id="@+id/lbloutput"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:gravity="center"
+        android:textSize="30dp" />
+</LinearLayout>
+
+
+
